--- a/Style/Base.css
+++ b/Style/Base.css
@@ -1,3 +1,14 @@
+@font-face {
+    font-family: 'junction';
+    src: url('junctionFont/Junction-webfont.eot');
+    src: url('junctionFont/Junction-webfont.eot?#iefix') format('embedded-opentype'),
+         url('junctionFont/Junction-webfont.woff') format('woff'),
+         url('junctionFont/Junction-webfont.ttf') format('truetype'),
+         url('junctionFont/Junction-webfont.svg#junction') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
 body {
     background-color: #ffffff;
     font-family: Helvetica, Calibri, sans-serif;
@@ -11,6 +22,7 @@ body {
     margin-bottom: 0;
 }
 h1 {
+    font-family: junction, sans-serif;
     background-color: #B0E5DC;
     color: #f07877;
     text-align: center;
@@ -65,6 +77,7 @@ nav ul li:nth-last-child(1) {
     display: inline-block;
 }
 h2 {
+    font-family: junction, sans-serif;
     color: #74A495;
 }
 #nav{
@@ -114,11 +127,14 @@ h2 {
     float: left;
 }
 footer {
+    border-top: 3px solid #f07877;
     clear: left;
     text-align: center;
     font-size: 0.8em;
+    color: #74A495;
+    margin: 0px 30px;
 }
 #content {
     position: relative;
-    top: 50px;
+    top: 70px;
 }
