added tables to pricing

--- a/Style/Base.css
+++ b/Style/Base.css
@@ -132,7 +132,7 @@ footer {
     text-align: center;
     font-size: 0.8em;
     color: #74A495;
-    margin: 0px 30px;
+    margin: 30px;
 }
 #content {
     position: relative;
