--- a/Style/Base.css
+++ b/Style/Base.css
@@ -28,16 +28,16 @@ h1 {
     text-align: center;
     padding: 30px;
     margin-top: 0px;
+    width: 100%;
 }
 header {
+    width: fill-available;
     margin-top: 0px;
 }
 nav {
     background-color: #ffffff;
     text-align: center;
-    position: relative;
     width: 100%;
-    z-index: 1;
 }
 nav ul {
     list-style-type: none;
@@ -45,7 +45,6 @@ nav ul {
 }
 nav ul li {
     display:  inline-block;
-    position: relative;
     border-right: 3px solid #f07877;
 }
 #nav li {
@@ -120,13 +119,13 @@ h2 {
 }
 #leftcol {
     float: left; 
-    width: 20%;
+    width: 30%;
     padding-left: 10%;
 }
 #rightcol {
     padding-left: 10%;
     float: left;
-    width: 40%;
+    width: 50%;
 }
 footer {
     border-top: 3px solid #f07877;
@@ -137,8 +136,10 @@ footer {
     margin: 30px;
 }
 #content {
-    width: 80%;
+    width: 1024px;
     margin: auto;
-    position: relative;
     margin-bottom: 10%;
+}
+header a {
+    text-decoration: none;
 }
