--- a/Style/Base.css
+++ b/Style/Base.css
@@ -121,11 +121,13 @@ h2 {
     float: left; 
     width: 30%;
     padding-left: 10%;
+    border-right: 3px solid #f07877;
+    padding: 1% 3%;
 }
 #rightcol {
-    padding-left: 10%;
+    padding-left: 5%;
     float: left;
-    width: 50%;
+    width: 55%;
 }
 footer {
     border-top: 3px solid #f07877;
@@ -133,12 +135,10 @@ footer {
     text-align: center;
     font-size: 0.8em;
     color: #74A495;
-    margin: 30px;
 }
 #content {
     width: 1024px;
     margin: auto;
-    margin-bottom: 10%;
 }
 header a {
     text-decoration: none;
