--- a/Style/Base.css
+++ b/Style/Base.css
@@ -31,8 +31,8 @@ h1 {
     width: 100%;
 }
 header {
-    width: fill-available;
     margin-top: 0px;
+    min-width: fill-available;
 }
 nav {
     background-color: #ffffff;
@@ -118,16 +118,17 @@ h2 {
     padding: 0px 10px; 
 }
 #leftcol {
+    margin: 5% 0;
+    padding: 1% 5% 1% 0;
     float: left; 
     width: 30%;
-    padding-left: 10%;
-    border-right: 3px solid #f07877;
-    padding: 1% 3%;
 }
 #rightcol {
-    padding-left: 5%;
     float: left;
-    width: 55%;
+    width: 50%;
+    border-left: 3px solid #f07877;
+    padding: 1% 5%;
+    margin: 5% 1%;
 }
 footer {
     border-top: 3px solid #f07877;
