--- a/Style/SignIn.css
+++ b/Style/SignIn.css
@@ -18,13 +18,13 @@ fieldset {
 	padding:15px;
 }
 #signinform {
-	border:3px solid #f07877;
 	width:250px;
 	padding: 15px;
+	text-align:right;
 }
 #registerform {
 	text-align:left;
 }
-#registerbutton {
+#submitbutton {
 	padding-left:20px;
 }
