created the alternative css

--- a/Style/Pricing.css
+++ b/Style/Pricing.css
@@ -16,7 +16,7 @@ th {
     border-right: 3px solid #f07877;
     font-family: junction, sans-serif;
     font-weight: bolder;
-    color: #B0E5DC;
+    color: #74A495;
     font-size: 1.35em;
     text-align: center;
 }
