--- a/Style/Base.css
+++ b/Style/Base.css
@@ -28,7 +28,7 @@ h1 {
     text-align: center;
     padding: 30px;
     margin-top: 0px;
-    width: 100%;
+    width: 1600px;
 }
 header {
     margin-top: 0px;
@@ -37,7 +37,7 @@ header {
 nav {
     background-color: #ffffff;
     text-align: center;
-    width: 100%;
+    width: 1600px;
 }
 nav ul {
     list-style-type: none;
@@ -121,11 +121,11 @@ h2 {
     margin: 5% 0;
     padding: 1% 5% 1% 0;
     float: left; 
-    width: 30%;
+    width: 300px;
 }
 #rightcol {
     float: left;
-    width: 50%;
+    width: 500px;
     border-left: 3px solid #f07877;
     padding: 1% 5%;
     margin: 5% 1%;
@@ -136,6 +136,7 @@ footer {
     text-align: center;
     font-size: 0.8em;
     color: #74A495;
+    width: 1600px;
 }
 #content {
     width: 1024px;
