--- a/Style/Base.css
+++ b/Style/Base.css
@@ -28,16 +28,15 @@ h1 {
     text-align: center;
     padding: 30px;
     margin-top: 0px;
-    width: 1600px;
+    width: 100%;
 }
 header {
     margin-top: 0px;
-    min-width: fill-available;
 }
 nav {
     background-color: #ffffff;
     text-align: center;
-    width: 1600px;
+    width: 100%;
 }
 nav ul {
     list-style-type: none;
@@ -81,7 +80,7 @@ h2 {
 }
 #nav{
     list-style:none;
-    font-weight:bold;
+    font-weight:bolder;
     margin-bottom:10px;
     float:left;
     width:100%;
@@ -89,7 +88,7 @@ h2 {
 #nav a{
     display:block;
     padding:5px;
-    color:#B0E5DC;
+    color:#74A495;
     background:#ffffff;
     text-decoration:none;
 }
@@ -136,7 +135,7 @@ footer {
     text-align: center;
     font-size: 0.8em;
     color: #74A495;
-    width: 1600px;
+    width: 100%;
 }
 #content {
     width: 1024px;
