--- a/Style/Base.css
+++ b/Style/Base.css
@@ -178,6 +178,28 @@ td {
     border-right: 3px solid #f07877;
     padding-left: 5%; 
 }
+#gallery { 
+    position: relative;        
+}
+
+#gallery ul { 
+    width: 700px;            
+}
+#gallery li { 
+    display: inline-block; 
+	padding: 10px;
+    list-style-type: none;
+}
+
+#gallery img { 
+    border-style: none;
+}
+
+#gallery a { 
+    text-decoration: none; 
+	color: #333; 
+	font-style: italic;
+}
 footer {
     border-top: 3px solid #f07877;
     clear: left;
