--- a/Style/Base.css
+++ b/Style/Base.css
@@ -15,6 +15,14 @@ body {
     margin: 0;
     padding: 0;
 }
+a {
+    font-weight: bold;
+    text-decoration: none;
+    color: #74A495;
+}
+a:hover {
+    text-decoration: underline;
+}
 #signin {
     background-color: #ffffff;
     text-align: right;
@@ -199,6 +207,33 @@ td {
     text-decoration: none; 
 	color: #333; 
 	font-style: italic;
+}
+form {
+    padding-bottom: 10%;
+}
+legend{
+    display:block;
+    padding:5px;
+    color:#B0E5DC;
+	font-weight:bold;
+	font-size:1.35em;
+    background:#ffffff;
+    text-decoration:none;
+}
+fieldset {
+	border:3px solid #f07877;
+	padding:15px;
+}
+#signinform {
+	width:250px;
+	padding: 15px;
+	text-align:right;
+}
+#registerform {
+	text-align:left;
+}
+#submitbutton {
+	padding-left:20px;
 }
 footer {
     border-top: 3px solid #f07877;
