--- a/Style/Base.css
+++ b/Style/Base.css
@@ -225,7 +225,7 @@ form {
 legend{
     display:block;
     padding:5px;
-    color:#f07877;;
+    color:#f07877;
 	font-weight:bold;
 	font-size:1.35em;
     background:#ffffff;
@@ -258,4 +258,10 @@ footer {
     font-size: 0.8em;
     color: #74A495;
     width: 100%;
+}
+
+/*The navigation at the footer.*/
+#footernav li {
+    display: inline-block;
+    padding-right: 2em;
 }
