fixed the links

--- a/Style/Base.css
+++ b/Style/Base.css
@@ -225,7 +225,7 @@ form {
 legend{
     display:block;
     padding:5px;
-    color:#f07877;;
+    color:#f07877;
 	font-weight:bold;
 	font-size:1.35em;
     background:#ffffff;
