--- a/Style/Base.css
+++ b/Style/Base.css
@@ -71,6 +71,7 @@ h3 a {
 h3 a:hover {
     color: #74A495;
 }
+
 /*Removes the header margins.*/
 header {
     background: url("../Images/headerBackground.png");
@@ -269,4 +270,18 @@ footer {
 }
 #footernav li a {
         color: #f07877;
+}
+dt {
+    color: #74A495;
+    font-size: 1.15em;
+    font-weight: bold;
+    padding-bottom: 0.5em;
+}
+
+dd {
+    padding-bottom: 1.15em;
+}
+
+#dogsize th{
+    color: #74A495;
 }
