--- a/Style/Base.css
+++ b/Style/Base.css
@@ -17,6 +17,17 @@ body {
     margin: 0;
     padding: 0;
 }
+strong {
+    font-weight:  bold;
+    color: #74A495;
+}
+#cockerspaniel {
+    float: right;
+    position: relative;
+    top: 0;
+    left: 600px;
+    margin-right: 0px;
+}
 /*The links default colour.*/
 a {
     font-weight: bold;
