--- a/Style/Base.css
+++ b/Style/Base.css
@@ -317,4 +317,12 @@ footer {
 #pricetable tr:nth-child(even) {
     background-color: #fce4e3
 }
+
+/*The services list*/
+#serviceli ul {
+    list-style-image: url('../Images/pawprint.png');
+}
             
+#serviceli li {
+    padding: 4px;
+}
