--- a/Style/Base.css
+++ b/Style/Base.css
@@ -24,7 +24,7 @@ strong {
 #cockerspaniel {
     float: right;
     position: relative;
-    top: 0;
+    top: 60px;
     left: 250px;
     margin-right: 0px;
 }
