--- a/Style/Base.css
+++ b/Style/Base.css
@@ -17,6 +17,17 @@ body {
     margin: 0;
     padding: 0;
 }
+strong {
+    font-weight:  bold;
+    color: #74A495;
+}
+#cockerspaniel {
+    float: right;
+    position: relative;
+    top: 0;
+    left: 250px;
+    margin-right: 0px;
+}
 /*The links default colour.*/
 a {
     font-weight: bold;
@@ -287,4 +298,31 @@ footer {
 }
 #footernav li a {
         color: #f07877;
+}
+
+/*The pricing table*/
+#pricetable th {
+    color: #FFFFFF; 
+    background-color: #F07877;             
+    padding: 12px;             
+    border-bottom: 2px solid #F07877;             
+    border-top: 2px solid #F07877;             
+    border-right: 2px solid #F07877;
+}
+#pricetable td {
+    padding: 8px;            
+    border-bottom: 2px solid #F07877;        
+}
+            
+#pricetable tr:nth-child(even) {
+    background-color: #fce4e3
+}
+
+/*The services list*/
+#serviceli ul {
+    list-style-image: url('../Images/pawprint.png');
+}
+            
+#serviceli li {
+    padding: 4px;
 }
