Changed bullet point

--- a/Style/Base.css
+++ b/Style/Base.css
@@ -320,7 +320,7 @@ footer {
 
 /*The services list*/
 #serviceli ul {
-    list-style-image: url('../Images/pawprint.png');
+    list-style-image: url('../Images/pawprint1.png');
 }
             
 #serviceli li {
